# deploying_ocsigen

./: .gitignore  README.md
local/etc/myproject/: myproject-static.conf
server/: dune-project  ocsigen_semi_static_server.opam
